<resources>
    <string name="app_name">Car4Rent</string>
    <string name="S_customer">Customer</string>
    <string name="S_employee">Employee</string>
    <string name="S_car4rent">Car4Rent</string>
    <string name="S_to">to</string>
    <string name="S_welcome">Welcome</string>
    <string name="S_username">Username</string>
    <string name="S_password">password</string>
    <string name="S_log_in">Log In</string>
    <string name="S_remember_password">Remember Password</string>
    <string name="S_sign_up">Sign Up</string>
    <string name="S_forgot_password">Forgot Password</string>
    <string name="S_click_here">click here</string>
    <string name="S_Emp_remember_password">Remember Password</string>
    <string name="S_Emp_log_in">Log In</string>
    <string name="S_Emp_username">Username</string>
    <string name="S_Emp_password">Password</string>
    <string name="S_Emp_forgot_password">Forgot Password</string>
    <string name="S_Emp_click_here">Click Here</string>
    <string name="S_new_user">New User</string>
    <string name="S_first_name">First Name</string>
    <string name="S_last_name">Last Name</string>
    <string name="S_SignUp_email">Email</string>
    <string name="S_SignUp_new_password">New Password</string>
    <string name="S_SignUp_confirm_password">Confirm Password</string>
    <string name="S_SignUp_submit">Submit</string>
    <string name="S_SignUp_phone_number">Phone Number</string>
    <string name="S_phone_number1">Phone Number</string>
    <string name="S_ivcustomerLogin">TODO</string>
    <string name="S_todo">TODO</string>
    <string name="title_activity_log_in_click">LogInClickActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="add_customer_frag">Add Customer</string>
    <string name="click_to_add_a_new_customer_tv">Click to add a New Customer</string>
    <string name="title_activity_addcustomersubactivity">addcustomersubactivity</string>
    <string name="tv_header_email1">randhawasndeep76@gmail.com</string>
    <string name="tv_header_name1">SANDEEP SINGH</string>
    <string name="list_of_customer1">List Of Customer</string>
    <string name="R_add_vehicle">ADD Vehicle</string>
    <string name="view_vehicle_s1">View Vehicle</string>
    <string name="vehicle_list_s1">Vehicle List</string>

</resources>
